# SDL_SlotMachine

./: CMakeLists.txt  README.md
Source/: Game.cpp  Game.h  main.cpp
Source/Managers/: TextureManager.cpp  TextureManager.h
Source/Objects/: Background.cpp  Background.h  Button.cpp  Button.h  FPS_Counter.cpp  FPS_Counter.h  Object.h  Reel.cpp  Reel.h
